# motor-TPL-claims_freq_sev

./: .gitignore  README.md  main.py  motor_loss_cost_model.py  pyproject.toml
